Complete basic test-framework implementation with core functionality
Co-authored-by: liuxiao2015 <12387214+liuxiao2015@users.noreply.github.com>